# python-project-50

./: .gitignore  Makefile  README.md  README.md.save  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: format_parser.py  gendiff.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
